@@ -1,6 +1,11 @@
 ispCP ω 1.0.5 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2010-03-01 Laurent Declercq
+	- SETUP:
+		* Fixed (AGAIN) #1725: /var/log/rkhunter.log not readable
+		* Merged Rkhunter setup/update tasks
+
 2010-02-28 Benedikt Heintel
 	- ENGINE:
 		* Changed: Permissions for fcgi folders php.ini
